<resources>
    <string name="app_name">calculator</string>
    <string name="c">c</string>
    <string name="percent">%</string>
    <string name="x">x</string>
    <string name="divide">/</string>
    <string name="cut">cut</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="xc">x</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="m">--</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="k">.</string>
    <string name="e">=</string>
</resources>