<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttons_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:padding="15dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/Widget.Design.FloatingActionButton"
            android:text="@string/c"
            android:textSize="32sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="1dp"
            android:id="@+id/clear"
            android:gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/Widget.Design.FloatingActionButton"
            android:text="@string/percent"
            android:textSize="32sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:id="@+id/percent"
            android:gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/Widget.Design.FloatingActionButton"
            android:text="@string/cut"
            android:textSize="32sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:id="@+id/cut"
            android:gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/Widget.Design.FloatingActionButton"
            android:text="@string/divide"
            android:textSize="32sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:id="@+id/btn10"
            android:gravity="center"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:padding="15dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_7"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="1dp"
                android:id="@+id/btn7"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_8"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/btn8"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_9"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/btn9"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"

                android:text="@string/xc"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/multiply"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:padding="15dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_6"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="1dp"
                android:id="@+id/btn6"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"

                android:text="@string/_5"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/btn5"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_4"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/btn4"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/m"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/minus"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:padding="15dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_3"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="1dp"
                android:id="@+id/btn3"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_2"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/btn2"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_1"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/btn1"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/plus"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/plus"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:padding="15dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_00"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="1dp"
                android:id="@+id/zero1"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/_0"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/zero"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/k"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/dot"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.Design.FloatingActionButton"
                android:text="@string/e"
                android:textSize="32sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="20dp"
                android:id="@+id/equal"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>





</RelativeLayout>